<resources>
    <string name="app_name">LuggageBox</string>

    <string name="kakao_app_key">dfc2430c2e2a142ba0a3f4b9f825ebd2</string>
    <string name="logoImage">logo</string>
    <string name="kakaoLogo">kakao</string>
    <string name="title">현재 맡긴 짐</string>
    <string name="search_string">위치 검색</string>
    <string name="detail_string">상세 정보</string>
    <string name="btn_ok">OK</string>
    <string name="Toast_add">추가되었습니다.</string>
    <string name="Toast_delete">삭제되었습니다.</string>
    <string name="nav_logout"><u>로그아웃</u></string>
    <string name="apply_complete">예약 완료</string>
    <string name="waiting">예약 대기</string>
    <string name="instorage">보 관 중</string>
    <string name="deal_complete">거래 완료</string>
    <string name="apply_list_name">땡땡땡</string>
    <string name="apply_list_kind">짐 종류 :</string>
    <string name="apply_list_kinds_input">캐리어</string>
    <string name="apply_list_size">짐 크기 :</string>
    <string name="apply_list_size_input">BIG</string>
    <string name="apply_list_startTime">시작하는 날짜/시간 :</string>
    <string name="apply_list_startTime_input">2020.10.27 15:00</string>
    <string name="apply_list_EndTime">종료하는 날짜/시간 :</string>
    <string name="apply_list_EndTime_input">2020.10.28 15:00</string>
    <string name="recently_address">주소</string>
    <string name="Qrcodescan">QR코드 인식</string>
    <string name="Qrcodescreate">QR코드</string>
    <string name="Number_input">전화번호를 입력하세요.</string>
    <string name="past">맡겼던 짐 목록</string>
    <string name="pastDay">2020.10.27</string>
    <string name="myinfo">내정보</string>
    <string name="apply">신청내역</string>
    <string name="location">Location</string>
    <string name="btn_register">신청하기</string>
    <string name="btn_apply">예약가능</string>
    <string name="status_deal_complete">현재 상태 : 거래 완료</string>





</resources>