<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="380dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/bg2"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_name"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="60dp"/>


    <ImageView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="130dp"
        android:src="@drawable/shape" />
    <ImageView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="170dp"
        android:src="@drawable/ic_mail" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_kind"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/Kinds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_kinds_input"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="120dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_size"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_size_input"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="120dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_startTime"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/StartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_startTime_input"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="190dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_EndTime"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/EndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_list_EndTime_input"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="190dp"/>

</RelativeLayout>