<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!-- 신청 내역-->
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/nav_btn_back"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"/>

    <!-- 예약 대기-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/apply"
        android:textColor="#000000"
        android:textFontWeight="700"
        android:textSize="25dp" />

    <ImageView
        android:id="@+id/btn_waiting"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:clickable="true"
        android:src="@drawable/bg3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiting"
        android:textColor="#000000"
        android:textFontWeight="700"
        android:textSize="25dp"
        android:layout_marginTop="122dp"
        android:layout_marginLeft="50dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="320dp"
        android:src="@drawable/ic_arrow"

        />
    <!-- 예약 완료-->
    <ImageView
        android:id="@+id/btn_complete"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/bg3"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_complete"
        android:textColor="#000000"
        android:textFontWeight="700"
        android:textSize="25dp"
        android:layout_marginTop="215dp"
        android:layout_marginLeft="50dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="320dp"
        android:src="@drawable/ic_arrow"
        />
    <!-- 보 관 중-->
    <ImageView
        android:id="@+id/btn_instorage"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginTop="270dp"
        android:src="@drawable/bg3"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instorage"
        android:textColor="#000000"
        android:textFontWeight="700"
        android:textSize="25dp"
        android:layout_marginTop="301dp"
        android:layout_marginLeft="50dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="297dp"
        android:layout_marginLeft="320dp"
        android:src="@drawable/ic_arrow"
        />

    <!-- 거래 완료-->
    <ImageView
        android:id="@+id/btn_deal_complete"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginTop="360dp"
        android:src="@drawable/bg3"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deal_complete"
        android:textColor="#000000"
        android:textFontWeight="700"
        android:textSize="25dp"
        android:layout_marginTop="392dp"
        android:layout_marginLeft="50dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="320dp"
        android:src="@drawable/ic_arrow"
        />

    </RelativeLayout>